refactor: evitar problemas na aplicação trocando toList para collect(Collectors.toList());