@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CampistaGatewayImpl implements CampistaGateway {
@@ -45,7 +46,7 @@ public class CampistaGatewayImpl implements CampistaGateway {
                 .findAllByEquipe_Id(idEquipe)
                 .stream()
                 .map(campistaMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -54,7 +55,7 @@ public class CampistaGatewayImpl implements CampistaGateway {
                 .findAllByCodigoRegistroOrderByPessoa_NomeCompleto(codigoRegistro)
                 .stream()
                 .map(campistaMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
